# NCQC

./: .gitignore  .gitlab-ci.yml  .pylintrc  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
examples/: 01-basic-example.ipynb  20240730_TNO_Westmaas-WESTMAAS_PAR004.nc
ncqc/: QCnetCDF.py  create_config.py  log.py
netcdfqc/: QCnetCDF.py  create_config.py  log.py  main.py
sample_data/: 20240430_Green_Village-GV_PAR008.nc  20240526_Green_Village-GV_THIES006.nc  20240530_Green_Village-GV_PAR008.nc  2024526_Green_Village-GV_THIES006.nc  example_config.yaml  example_config_existence.yaml  test_emptiness.nc
tests/: test_LoggerQC.py  test_QualityControl.py  test_adjacent_values_difference_check.py  test_boundary_check.py  test_check.py  test_consecutive_identical_values_check.py  test_consecutive_values_max_allowed_difference.py  test_consecutive_values_max_allowed_difference_check.py  test_create_config.py  test_create_report.py  test_data_boundaries_check.py  test_data_points_amount_check.py  test_emptiness_check.py  test_existence_check.py  test_file_size_check.py  test_main.py  test_max_number_of_consecutive_same_values.py  test_max_number_of_consecutive_same_values_check.py  test_perform_all_checks.py  test_values_change_rate_check.py
